@@ -29,7 +29,7 @@ namespace Omegasis.Revitalize.Framework.World.Objects.Storage
         {
         }
 
-        public override bool rightClicked(Farmer who)
+        public override bool checkForAction(Farmer who, bool justCheckingForActivity = false)
         {
             if (Game1.activeClickableMenu == null)
             {
