@@ -4,6 +4,9 @@ Key:
 - Removed Content/Feature.
 ! Broken/Alert
 
+~~~~~~~~~~~~0.0.1 Revitalize 3-22-2023 xx.xx P.M~~~~~~~~~~~~~~
+~Fixed some code so now dropping in items into machines functions with holding right click like normal gameplay.
+
 ~~~~~~~~~~~~0.0.1 Revitalize 3-21-2023 xx.xx P.M~~~~~~~~~~~~~~
 ~Anvils no longer are used to craft objects due to not being able to think of many use cases.
 +Anvils now can manually crack geodes, artifact troves, and golden coconuts.
